Fixed issue card logos overflowing

--- a/style.css
+++ b/style.css
@@ -118,14 +118,14 @@ a {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 500px), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
   align-items: center; 
-   gap: 5rem;
+  
 
 }
 
 .card {
-  height: 500px;
+  
   box-shadow: var(--shadow);
   display: flex;
   flex-direction: column;
